2004-01-05  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/tooltips.jl (display-tooltip): fixed font
	thing again

2003-11-24  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/wm-spec.jl (wm-spec-below-depth): changed
	from +2 to -2 (Patch from Aron Griffis <agriffis@gentoo.org>)

2003-10-21  John Harper  <jsh@unfactored.org>

	* sawfish/wm/frames.jl, sawfish/wm/state/shading.jl: patch from
	David Reid <dreid@dreid.ath.cx> to fix support shading on new
	window types

2003-08-16  John Harper  <jsh@unfactored.org>

	Integrated patches from Shun-ichi TAHARA <jado@flowernet.gr.jp>:

	* sawfish/wm/ext/tooltips.jl (display-tooltip): fixed how fonts
	are included in the call to display-message

2003-08-15  John Harper  <jsh@unfactored.org>

	* sawfish/wm/frames.jl (frame-type-fallback-alist): utility
	should degrade to default not transient (so it has controls)
	#111970

	* sawfish/wm/session/init.jl (sm-get-window-prop): ignore
	WM_CLIENT_LEADER property set to zero, may fix #98315

2003-08-13  John Harper  <jsh@unfactored.org>

	Integrated patches from Shun-ichi TAHARA <jado@flowernet.gr.jp>:

	* sawfish/wm/util/font.jl:

	Pango fontname handler has a bug on some font name, for
	example, "Nimbus Sans L". When set one of those fonts in
	"appearance" menu of sawfish-ui, and call that menu again, then
	the font name in dialog is reset to the default value of
	"Sans". Pango font name needs comma after the font family name
	if the last word of family name matches the style name (for
	example, "L" in "Nimbus Sans L" matches "Light"). So if set
	"Nimbus Sans L" with its size 12, sawfish holds the pango
	fontname "Nimbus Sans L 12", but GTK+ font selector extract it
	with the family name to be "Nimbus Sans", the style "L
	(=Light)", the size "12". In this case, sawfish must have the
	pango fontname as "Nimbus Sans L, 12".

	When using xft-type fonts, cannot set the font with hyphens in
	its name, for example, "Eras-Black". Xft font name separates