@@ -1,3 +1,8 @@
+2004-03-20  John Harper  <jsh@apple.com>
+
+	* sawfish/wm/util/prompt.jl: added motion and editing commands
+	to list of exported bindings (patch from Ewan Mellor)
+
 2004-01-05  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/ext/tooltips.jl (display-tooltip): fixed font
